syntax = "proto3";

package graytorrent;

option go_package = "github.com/kylec725/graytorrent/rpc";

service Torrent {
  // Requests a list of all managed torrents
  rpc List (Empty) returns (stream TorrentInfo) {}

  // Adds another torrent to be managed
  rpc Add (AddRequest) returns (AddReply) {}

  // Removes a torrent from being managed
  rpc Remove (SelectedTorrent) returns (Empty) {}

  // Starts a torrent's download/upload
  rpc Start (SelectedTorrent) returns (Empty) {}

  // Stops a torrent's download/upload
  rpc Stop (SelectedTorrent) returns (Empty) {}
}

message Empty {
}

message SelectedTorrent {
  bytes infoHash = 1;
}

message TorrentInfo {
  string name = 1;
  bytes infoHash = 2;
  uint32 totalLength = 3;
  uint32 left = 4;
  uint32 downRate = 5;
  uint32 upRate = 6;
  enum State {
    DOWNLOADING = 0;
    STOPPED = 1;
    STALLED = 2;
    SEEDING = 3;
    COMPLETE = 4;
  }
  State state = 7;
}

message AddRequest {
  string file = 1;
  string magnet = 2;
}

message AddReply {
  string name = 1;
  bytes infoHash = 2;
}
